# MetricOne

./: .env  Dockerfile  README.md  docker-compose.yml  metric-prototype.html  pyproject.toml  指标管理项目说明书v1.1.0.md
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  calibers.py  dashboard.py  datasets.py  dimensions.py  metrics.py  tasks.py
app/core/: celery_app.py  config.py  database.py  logging.py  security.py
app/dsl/: grammar.lark  parser.py
app/migrations/: README.md
app/models/: access.py  base.py  dataset.py  metric.py  task.py
app/pipelines/: airflow.py
app/schemas/: auth.py  caliber.py  dataset.py  dimension.py  metric.py  task.py
app/services/: auth.py  calibers.py  datasets.py  dimensions.py  metrics.py  tasks.py  version_calibers.py
app/utils/: minio.py
app/workers/: tasks.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: CaliberManagement.tsx  DashboardStatsCards.tsx  DimensionManagement.tsx  MetricDetailView.tsx  MetricListTable.tsx  RecentUploadsCard.tsx  SidebarMenu.tsx  TaskOverviewCard.tsx  TopHeader.tsx  VersionManagement.tsx
frontend/src/store/: useViewStore.ts
scripts/: create_tables.py
